Add REST endpoint to register a new SAML SP
This change adds a new PUT /_idp/saml/sp/{entity_id} endpoint that
registers (or updates) a Service Provider in the IDP.